--- a/GoogleService-Info.plist
+++ b/GoogleService-Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyC2ORlYL2qXkFHOQvxKecg3Pzpp8GdprrI</string>
+	<string>AIzaSyDPtnAeG7FxpZTa7CiP6Xd2LbbaI_jYhpc</string>
 	<key>GCM_SENDER_ID</key>
-	<string>1031201187766</string>
+	<string>734632008133</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.edunovaasia.edusis</string>
+	<string>com.edunovaasia.paragon</string>
 	<key>PROJECT_ID</key>
-	<string>edunova-bfi</string>
+	<string>paragonisc-7ef64</string>
 	<key>STORAGE_BUCKET</key>
-	<string>edunova-bfi.firebasestorage.app</string>
+	<string>paragonisc-7ef64.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:1031201187766:ios:0a30229566123901f90317</string>
+	<string>1:734632008133:ios:86019c563d17b19a73d3ac</string>
 </dict>
 </plist>
