--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,10 +4,7 @@
   <uses-permission android:name="android.permission.RECORD_AUDIO"/>
   <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
   <uses-permission android:name="android.permission.VIBRATE"/>
-  <uses-permission android:name="android.permission.WAKE_LOCK"/>
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-  <uses-permission android:name="com.edunovaasia.edusis.permission.C2D_MESSAGE"/>
-  <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
   <queries>
     <intent>
       <action android:name="android.intent.action.VIEW"/>
@@ -15,9 +12,8 @@
       <data android:scheme="https"/>
     </intent>
   </queries>
-  <permission android:name="com.edunovaasia.edusis.permission.C2D_MESSAGE" android:protectionLevel="signature"/>
   <application android:name=".MainApplication" android:label="@string/app_name" android:icon="@mipmap/ic_launcher" android:roundIcon="@mipmap/ic_launcher_round" android:allowBackup="true" android:theme="@style/AppTheme" android:supportsRtl="true">
-    <meta-data android:name="com.google.firebase.messaging.default_notification_color" android:resource="@color/notification_icon_color" tools:replace="android:resource"/>
+    <meta-data android:name="com.google.firebase.messaging.default_notification_color" android:resource="@color/notification_icon_color"/>
     <meta-data android:name="expo.modules.notifications.default_notification_color" android:resource="@color/notification_icon_color"/>
     <meta-data android:name="expo.modules.updates.ENABLED" android:value="true"/>
     <meta-data android:name="expo.modules.updates.EXPO_RUNTIME_VERSION" android:value="@string/expo_runtime_version"/>
@@ -33,8 +29,8 @@
         <action android:name="android.intent.action.VIEW"/>
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
-        <data android:scheme="com.edunovaasia.edusis"/>
-        <data android:scheme="exp+edu-sis"/>
+        <data android:scheme="com.edunovaasia.paragon"/>
+        <data android:scheme="exp+edu-sis-paragan"/>
       </intent-filter>
     </activity>
   </application>
