--- a/ios/Podfile
+++ b/ios/Podfile
@@ -13,7 +13,7 @@ install! 'cocoapods',
 
 prepare_react_native_project!
 
-target 'BFIEducationSIS' do
+target 'EduNovaSchool' do
   use_expo_modules!
 
   if ENV['EXPO_USE_COMMUNITY_AUTOLINKING'] == '1'
