enhance .gitignore to better exclude sensitive files and secrets; add cleanup report for project review

--- a/.gitignore
+++ b/.gitignore
@@ -162,14 +162,38 @@ edunova-bfi-*.json
 
 # Secrets in src folder
 src/secrets/
+src/config/secrets/
+src/config/keys/
 src/**/*secret*
-src/**/*key*
+src/**/*-secret*
+src/**/*_secret*
+src/**/*.secret.*
+src/**/*key.js
+src/**/*key.json
+src/**/*keys.js
+src/**/*keys.json
+src/**/*-key.*
+src/**/*_key.*
 src/**/*password*
+src/**/*-password*
+src/**/*_password*
 src/**/*token*
+src/**/*-token*
+src/**/*_token*
 src/**/*.pem
 src/**/*.p12
 src/**/*.pfx
-src/**/*service*
-src/**/*-service.*
-src/**/*_service.*
-src/**/*.service.*
+src/**/*credentials*
+src/**/*-credentials*
+src/**/*_credentials*
+src/**/*auth-config*
+src/**/*auth_config*
+src/**/*firebase-config*
+src/**/*firebase_config*
+src/**/*google-service-account*
+src/**/*google_service_account*
+src/**/*service-account*
+src/**/*service_account*
+src/**/*oauth*
+src/**/*-oauth*
+src/**/*_oauth*
