updated some screens

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "edu-sis-paragon",
+  "name": "edu-sis-paragon-separated",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
