update: Combined Teacher and Parent app together

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "EduNova School",
+    "name": "Paragon ISC",
     "slug": "edu-sis-paragan",
     "version": "1.0.0",
     "orientation": "default",
