--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-clipboard/clipboard": "^1.16.3",
     "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-firebase/app": "^21.13.0",
     "@react-native-firebase/messaging": "^21.13.0",
     "@react-native-google-signin/google-signin": "^15.0.0",
@@ -59,14 +60,17 @@
     "@react-navigation/native-stack": "^7.3.3",
     "expo": "~52.0.46",
     "expo-build-properties": "~0.13.3",
+    "expo-camera": "~16.0.18",
     "expo-constants": "~17.0.8",
     "expo-dev-client": "~5.0.20",
     "expo-device": "~7.0.3",
     "expo-document-picker": "~13.0.3",
     "expo-image-picker": "~16.0.3",
+    "expo-location": "~18.0.10",
     "expo-modules-core": "~2.2.3",
     "expo-notifications": "~0.29.14",
     "expo-screen-orientation": "~8.0.4",
+    "expo-sharing": "^13.1.5",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.9",
     "expo-updates": "~0.27.4",
@@ -74,8 +78,10 @@
     "react-native": "0.76.9",
     "react-native-gesture-handler": "^2.27.1",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-maps": "1.18.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-orientation-locker": "^1.7.0",
+    "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
