--- a/ios/ParagonISC.xcodeproj/xcshareddata/xcschemes/ParagonISC.xcscheme
+++ b/ios/ParagonISC.xcodeproj/xcshareddata/xcschemes/ParagonISC.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "EduNovaSchool.app"
-               BlueprintName = "EduNovaSchool"
-               ReferencedContainer = "container:EduNovaSchool.xcodeproj">
+               BuildableName = "ParagonISC.app"
+               BlueprintName = "ParagonISC"
+               ReferencedContainer = "container:ParagonISC.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "EduNovaSchoolTests.xctest"
-               BlueprintName = "EduNovaSchoolTests"
-               ReferencedContainer = "container:EduNovaSchool.xcodeproj">
+               BuildableName = "ParagonISCTests.xctest"
+               BlueprintName = "ParagonISCTests"
+               ReferencedContainer = "container:ParagonISC.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "EduNovaSchool.app"
-            BlueprintName = "EduNovaSchool"
-            ReferencedContainer = "container:EduNovaSchool.xcodeproj">
+            BuildableName = "ParagonISC.app"
+            BlueprintName = "ParagonISC"
+            ReferencedContainer = "container:ParagonISC.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "EduNovaSchool.app"
-            BlueprintName = "EduNovaSchool"
-            ReferencedContainer = "container:EduNovaSchool.xcodeproj">
+            BuildableName = "ParagonISC.app"
+            BlueprintName = "ParagonISC"
+            ReferencedContainer = "container:ParagonISC.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
