fix: fixed bugs

--- a/ios/ParagonISC/Supporting/Expo.plist
+++ b/ios/ParagonISC/Supporting/Expo.plist
@@ -5,12 +5,10 @@
     <key>EXUpdatesCheckOnLaunch</key>
     <string>ALWAYS</string>
     <key>EXUpdatesEnabled</key>
-    <true/>
+    <false/>
     <key>EXUpdatesLaunchWaitMs</key>
     <integer>0</integer>
     <key>EXUpdatesRuntimeVersion</key>
     <string>1.0.0</string>
-    <key>EXUpdatesURL</key>
-    <string>https://u.expo.dev/5c37501a-d3f1-49d2-bf38-28446fc1b0bb</string>
   </dict>
 </plist>
