--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "@react-navigation/elements": "^2.3.1",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.3.3",
-    "expo": "~52.0.46",
+    "expo": "~52.0.47",
     "expo-build-properties": "~0.13.3",
     "expo-camera": "~16.0.18",
     "expo-constants": "~17.0.8",
@@ -70,13 +70,13 @@
     "expo-modules-core": "~2.2.3",
     "expo-notifications": "~0.29.14",
     "expo-screen-orientation": "~8.0.4",
-    "expo-sharing": "^13.1.5",
+    "expo-sharing": "~13.0.1",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.9",
     "expo-updates": "~0.27.4",
     "react": "18.3.1",
     "react-native": "0.76.9",
-    "react-native-gesture-handler": "^2.27.1",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-maps": "1.18.0",
     "react-native-modal-datetime-picker": "^18.0.0",
