fix: resolve DemoCredentialsCard module resolution issue for EAS builds
- Add simplified DemoCredentialsCard component
- Update .gitignore to allow DemoCredentialsCard.js
- Add metro.config.js for better module resolution
- Add .easignore for cleaner builds

--- a/.gitignore
+++ b/.gitignore
@@ -186,6 +186,8 @@ src/**/*.pfx
 src/**/*credentials*
 src/**/*-credentials*
 src/**/*_credentials*
+# Exception for demo component
+!src/components/DemoCredentialsCard.js
 src/**/*auth-config*
 src/**/*auth_config*
 src/**/*firebase-config*
