--- a/ios/ParagonISC/Supporting/Expo.plist
+++ b/ios/ParagonISC/Supporting/Expo.plist
@@ -5,10 +5,12 @@
     <key>EXUpdatesCheckOnLaunch</key>
     <string>ALWAYS</string>
     <key>EXUpdatesEnabled</key>
-    <false/>
+    <true/>
     <key>EXUpdatesLaunchWaitMs</key>
     <integer>0</integer>
     <key>EXUpdatesRuntimeVersion</key>
     <string>1.0.0</string>
+    <key>EXUpdatesURL</key>
+    <string>https://u.expo.dev/d2f3ca2f-ca7f-422a-ad4e-6f62e3fbc81e</string>
   </dict>
 </plist>
