update: Updated  GradesScreen and components, NotificationScreen, PickupManagementScreen

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -60,3 +60,8 @@ android.compileSdkVersion=35
 android.targetSdkVersion=35
 android.buildToolsVersion=35.0.0
 android.extraMavenRepos=[]
+
+# Keystore configuration for release builds
+KEYSTORE_PASSWORD=280992
+KEY_ALIAS=upload
+KEY_PASSWORD=280992
