--- a/package.json
+++ b/package.json
@@ -47,44 +47,46 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-clipboard/clipboard": "^1.16.3",
-    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-community/netinfo": "^11.4.1",
-    "@react-native-firebase/app": "^21.13.0",
-    "@react-native-firebase/messaging": "^21.13.0",
+    "@react-native-firebase/app": "^23",
+    "@react-native-firebase/messaging": "^23",
     "@react-native-google-signin/google-signin": "^15.0.0",
-    "@react-native-picker/picker": "^2.8.1",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/elements": "^2.3.1",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.3.3",
-    "expo": "~52.0.47",
-    "expo-build-properties": "~0.13.3",
-    "expo-camera": "~16.0.18",
-    "expo-constants": "~17.0.8",
-    "expo-dev-client": "~5.0.20",
-    "expo-device": "~7.0.3",
-    "expo-document-picker": "~13.0.3",
-    "expo-image-picker": "~16.0.3",
-    "expo-location": "~18.0.10",
-    "expo-modules-core": "~2.2.3",
-    "expo-notifications": "~0.29.14",
-    "expo-screen-orientation": "~8.0.4",
-    "expo-sharing": "~13.0.1",
-    "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "~4.0.9",
-    "expo-updates": "~0.27.4",
-    "react": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-maps": "1.18.0",
+    "babel-preset-expo": "~54.0.0",
+    "expo": "^54.0.9",
+    "expo-build-properties": "~1.0.9",
+    "expo-camera": "~17.0.8",
+    "expo-constants": "~18.0.9",
+    "expo-dev-client": "~6.0.12",
+    "expo-device": "~8.0.8",
+    "expo-document-picker": "~14.0.7",
+    "expo-image-picker": "~17.0.8",
+    "expo-location": "~19.0.7",
+    "expo-modules-core": "~3.0.17",
+    "expo-notifications": "~0.32.11",
+    "expo-screen-orientation": "~9.0.7",
+    "expo-sharing": "~14.0.7",
+    "expo-status-bar": "~3.0.8",
+    "expo-system-ui": "~6.0.7",
+    "expo-updates": "~29.0.11",
+    "react": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-maps": "1.20.1",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-qrcode-svg": "^6.3.15",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
-    "react-native-webview": "13.12.5"
+    "react-native-reanimated": "~4.1.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-webview": "13.15.0",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
