update: keystore conflict update

--- a/eas.json
+++ b/eas.json
@@ -19,14 +19,13 @@
         "gradleCommand": ":app:bundleRelease",
         "image": "latest",
         "buildType": "app-bundle",
-        "credentialsSource": "local",
+        "credentialsSource": "remote",
         "env": {
           "GRADLE_OPTS": "-Dorg.gradle.daemon=false -Dorg.gradle.jvmargs=-Xmx4g",
           "GOOGLE_SERVICE_ACCOUNT_KEY": "$GOOGLE_SERVICE_ACCOUNT_KEY"
         }
       },
       "ios": {
-        
         "cache": {
           "disabled": true
         }
