--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "expo-updates": "~29.0.11",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "1.20.1",
