--- a/package.json
+++ b/package.json
@@ -59,31 +59,31 @@
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.3.3",
     "babel-preset-expo": "~54.0.0",
-    "expo": "^54.0.9",
+    "expo": "54.0.19",
     "expo-build-properties": "~1.0.9",
     "expo-camera": "~17.0.8",
-    "expo-constants": "~18.0.9",
-    "expo-dev-client": "~6.0.12",
-    "expo-device": "~8.0.8",
+    "expo-constants": "~18.0.10",
+    "expo-dev-client": "~6.0.16",
+    "expo-device": "~8.0.9",
     "expo-document-picker": "~14.0.7",
     "expo-image-picker": "~17.0.8",
     "expo-location": "~19.0.7",
     "expo-modules-core": "~3.0.17",
-    "expo-notifications": "~0.32.11",
+    "expo-notifications": "~0.32.12",
     "expo-screen-orientation": "~9.0.7",
     "expo-sharing": "~14.0.7",
     "expo-status-bar": "~3.0.8",
-    "expo-system-ui": "~6.0.7",
-    "expo-updates": "~29.0.11",
+    "expo-system-ui": "~6.0.8",
+    "expo-updates": "~29.0.12",
     "react": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "1.20.1",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-qrcode-svg": "^6.3.15",
-    "react-native-reanimated": "~4.1.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
